--- a/vignettes/DWD-Daten.Rnw
+++ b/vignettes/DWD-Daten.Rnw
@@ -17,14 +17,15 @@ opts_chunk$set(dpi=300, tidy=TRUE, cache=TRUE, dev="png", fig.pos="h", error=FAL
 \subsection{Station Cottbus}
 
 <<download, cache=FALSE>>=
-#KlimadatenCottbus <- getDWDdata("10496", historisch=NA, Metadaten=TRUE) 
+KlimadatenCottbus <- getDWDdata("00880", historisch=NA, Metadaten=TRUE) 
 #save(KlimadatenCottbus, file="temp.RData")
-load("temp.RData")
+#load("temp.RData")
+View(KlimadatenCottbus$Daten)
 attach(KlimadatenCottbus$Daten)
 @
 
 <<display, fig.cap="Zeitreihenplot", fig.height=4>>=
-plot(NIEDERSCHLAGSHOEHE~Mess_Datum, KlimadatenCottbus$Daten, type="h")
+plot(NIEDERSCHLAGSHOEHE~MESS_DATUM, KlimadatenCottbus$Daten, type="h")
 @
 
 
@@ -33,11 +34,11 @@ plot(sort(KlimadatenCottbus$Daten$NIEDERSCHLAGSHOEHE), pch=20)
 @
 
 <<Scatterplot-Lufttemperatur-Jahresverlauf, fig.cap="Darstellung der innerjährlichen Variabilität durch ein Streudiagramm", fig.height=4>>=
-plot(yday(Mess_Datum), LUFTTEMPERATUR, pch=20, cex=0.1, col=rgb(0,0,0,1), main="Lufttemperatur im Jahresverlauf")
+plot(yday(MESS_DATUM), LUFTTEMPERATUR, pch=20, cex=0.1, col=rgb(0,0,0,1), main="Lufttemperatur im Jahresverlauf")
 @
 
 <<Sonnenscheindauer-Cottbus, fig.cap="Innerjährliche Variabilität der Sonnenscheindauer", fig.height=4>>=
-plot(yday(Mess_Datum), SONNENSCHEINDAUER, pch=20, cex=0.1, main="Sonnenscheindauer")
+plot(yday(MESS_DATUM), SONNENSCHEINDAUER, pch=20, cex=0.1, main="Sonnenscheindauer")
 @
 
 <<detach, cache=FALSE>>=
@@ -56,14 +57,14 @@ Stationen <- getDWDstations()
 
 Daten aller Stationen herunterladen
 <<Daten-aller-Stationen>>=
-# DWDdata <- list()
-# for(i in (1:length(Stationen$Stationsname))){
-# 	DWDdata[[Stationen$Stationsname[i]]] <- 
-# 		try(getDWDdata(Stationen$"Stations-Kennziffer"[i], Metadaten = T, historisch = NA))
-# }
-# 
-# save(DWDdata, file="DWD-Daten.RData")
-load(file="DWD-Daten.RData")
+DWDdata <- list()
+for(i in (1:length(Stationen$Stationsname))){
+	DWDdata[[Stationen$Stationsname[i]]] <- 
+		try(getDWDdata(Stationen$Stations_id[i], historisch = NA, Metadaten = FALSE))
+}
+
+save(DWDdata, file="DWD-Daten.RData")
+#load(file="DWD-Daten.RData")
 @
 
 Fehlerhafte Stationen aus der Liste entfernen:
@@ -79,7 +80,7 @@ Vergleich der Sonnenscheindauer (Abbildung \ref{fig:Vergleich-Sonnenscheindauer}
 layout(matrix(1:9, ncol=3))
 for(index in c(30,32,34,35,51,56,64,67,70)){
 	with(tail(DWDdata[[Stationen$Stationsname[index]]]$Daten, 365*10),{
-		plot(yday(Mess_Datum), SONNENSCHEINDAUER, pch=20, cex=0.1, main=paste("Sonnenscheindauer\n", Stationen$Stationsname[index]), ylim=c(0,18))
+		plot(yday(MESS_DATUM), SONNENSCHEINDAUER, pch=20, cex=0.1, main=paste("Sonnenscheindauer\n", Stationen$Stationsname[index]), ylim=c(0,18))
 	})
 }
 @
@@ -90,7 +91,7 @@ Vergleich Temperatur
 layout(matrix(1:6, ncol=2))
 for(index in order(Stationen$Stationshöhe)[c(1,4,5, 73:75)]){
 	with(tail(DWDdata[[Stationen$Stationsname[index]]]$Daten, 365*10),{
-		plot(yday(Mess_Datum), LUFTTEMPERATUR, pch=20, cex=0.1, main=paste0("Lufttemperatur ", Stationen$Stationsname[index], ", \nHöhe über NN = ", Stationen$Stationshöhe[index], "m"), ylim=c(-30, 30))
+		plot(yday(MESS_DATUM), LUFTTEMPERATUR, pch=20, cex=0.1, main=paste0("Lufttemperatur ", Stationen$Stationsname[index], ", \nHöhe über NN = ", Stationen$Stationshöhe[index], "m"), ylim=c(-30, 30))
 	})
 }
 @
@@ -99,7 +100,7 @@ Es lässt sich erkennen: Küstennahe Standorte zeigen weniger innermonatliche Va
 <<Niederschlag, fig.cap="Streudiagramm Niederschlagshöhe über den Jahresverlauf. Vergleich verschiedener Stationen", eval=FALSE>>=
 for(Station in Stationen$Stationsname[-c(42,70)]){
 	with(tail(DWDdata[[Station]]$Daten, 365*10),{
-		plot(yday(Mess_Datum), NIEDERSCHLAGSHOEHE, pch=20, cex=0.1, main=paste("Niederschlagshöhe", Station), log="y")
+		plot(yday(MESS_DATUM), NIEDERSCHLAGSHOEHE, pch=20, cex=0.1, main=paste("Niederschlagshöhe", Station), log="y")
 	})
 }
 @
@@ -107,7 +108,7 @@ for(Station in Stationen$Stationsname[-c(42,70)]){
 <<Dampfdruck, eval=FALSE>>=
 for(Station in Stationen$Stationsname){
 	with(tail(DWDdata[[Station]]$Daten, 365*10),{
-		plot(yday(Mess_Datum), DAMPFDRUCK, pch=20, cex=0.1, main=paste("Dampfdruck", Station), ylim=c(0,30))
+		plot(yday(MESS_DATUM), DAMPFDRUCK, pch=20, cex=0.1, main=paste("Dampfdruck", Station), ylim=c(0,30))
 	})
 }
 @
@@ -132,7 +133,7 @@ legend("bottomright", c("mit Niederschlag", "ohne Niederschlag"), col=c("blue", 
 Cottbus <- KlimadatenCottbus
 
 Temp <- Cottbus$Daten$LUFTTEMPERATUR
-Datum <- Cottbus$Daten$Mess_Datum
+Datum <- Cottbus$Daten$MESS_DATUM
 Sonnenschein <- Cottbus$Daten$SONNENSCHEINDAUER
 U <- Cottbus$Daten$REL_FEUCHTE       
 Wind <- Cottbus$Daten$WINDGESCHWINDIGKEIT
